Page parsing updates

--- a/test_pdf/parse_chequing_new_xml.ipynb
+++ b/test_pdf/parse_chequing_new_xml.ipynb
@@ -7,18 +7,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import xml.etree.ElementTree as ET\n",
-    "from typing import NamedTuple\n",
+    "import datetime\n",
     "import itertools\n",
     "import json\n",
-    "from decimal import Decimal\n",
-    "from itertools import groupby, starmap, takewhile\n",
-    "from functools import partial\n",
-    "from typing import List, Iterator\n",
     "import logging\n",
+    "import re\n",
     "import sys\n",
+    "import typing\n",
+    "import xml.etree.ElementTree as ET\n",
     "\n",
-    "from parsel import Selector"
+    "from decimal import Decimal\n",
+    "from functools import partial\n",
+    "from itertools import groupby, starmap, takewhile\n",
+    "from typing import List, Iterator, NamedTuple\n",
+    "\n",
+    "from parsel import Selector\n",
+    "from dateutil.parser import parse as date_parse"
    ]
   },
   {
@@ -139,13 +143,23 @@
    "outputs": [],
    "source": [
     "details_sentinel = \"Details of your account\"\n",
+    "date_matcher = re.compile(r\"^From (.+) to (.+)$\")\n",
+    "\n",
     "Component = TextLine|Separator\n",
     "Components = List[Component]\n",
     "\n",
-    "def process_page_components(page_tag: Selector) -> Components:\n",
+    "\n",
+    "class Page(NamedTuple):\n",
+    "    start_date: datetime.date\n",
+    "    end_date: datetime.date\n",
+    "    components: Components\n",
+    "\n",
+    "def process_page_components(page_tag: Selector) -> Page:\n",
     "    page_id = page_tag.attrib.get(\"id\", \"0\")\n",
     "    log.info(f\"Processing page {page_id}\")\n",
     "\n",
+    "    start_date = None\n",
+    "    end_date = None\n",
     "    page_transaction_components = []\n",
     "    sentinel_found = None\n",
     "    \n",
@@ -158,6 +172,11 @@
     "        if textline.text.startswith(details_sentinel):\n",
     "            log.info(f\"sentinel found: {textline.text!r}\")\n",
     "            sentinel_found = textline\n",
+    "        if date_matcher.match(textline.text):\n",
+    "            log.info(f\"found page dates: {textline}\")\n",
+    "            start_date_str, end_date_str = date_matcher.match(textline.text).groups()\n",
+    "            start_date = date_parse(start_date_str)\n",
+    "            end_date = date_parse(end_date_str)\n",
     "\n",
     "    sep_lines = []\n",
     "    # Filter for all lines\n",
@@ -183,7 +202,7 @@
     "            page_transaction_components.append(sep)\n",
     "\n",
     "    # Sort the parsed transaction components vertically (inversed), then horizontally\n",
-    "    page_transaction_components.sort(key=lambda item: (-(item.bbox.bottom), item.bbox.left))\n",
+    "    page_transaction_components.sort(key=lambda item: (-(item.bbox.top), item.bbox.left))\n",
     "\n",
     "    # Take all items after sentinel\n",
     "    sentinel_index = page_transaction_components.index(sentinel_found)\n",
@@ -192,7 +211,7 @@
     "    if len(page_transaction_components) < sentinel_index+1:\n",
     "        raise\n",
     "\n",
-    "    return page_transaction_components[sentinel_index+1:]"
+    "    return Page(start_date=start_date, end_date=end_date, components=page_transaction_components[sentinel_index+1:])"
    ]
   },
   {
@@ -203,7 +222,7 @@
    "outputs": [],
    "source": [
     "transaction_fields = [\"date\", \"description\", \"withdrawals\", \"deposits\", \"balance\"]\n",
-    "transaction_field_types = [str, str, Decimal, Decimal, Decimal]\n",
+    "transaction_field_types = [datetime.date, str, Decimal, Decimal, Decimal]\n",
     "Transaction = NamedTuple(\"Transaction\", list(zip(transaction_fields, transaction_field_types)))\n",
     "\n",
     "def take_transaction_components(components: Iterator[Component]) -> Components:\n",
@@ -219,7 +238,6 @@
     "\n",
     "def validate_transaction_headers(header_text: List[TextLine]) -> bool:\n",
     "    if len(header_text) != len(transaction_fields):\n",
-    "        print(f\"header mismatch: {header_text!r} {transaction_fields!r}\")\n",
     "        return False\n",
     "\n",
     "    # Ensure headers are Text types\n",
@@ -233,14 +251,12 @@
     "        header_text.text.lower().startswith(fieldname)\n",
     "        for header_text, fieldname in zip(header_text, transaction_fields)\n",
     "    ]\n",
-    "    print(f\"fields_match: {fields_match}\")\n",
     "    return all(fields_match)\n",
     "\n",
     "def map_component_to_field(header_fields: dict[str, TextLine], component: TextLine) -> (str, TextLine):\n",
-    "    threshold = 25\n",
     "    field_name = \"\"\n",
     "\n",
-    "    def is_aligned(field: str, a: Component, b: Component):\n",
+    "    def is_aligned(field: str, a: Component, b: Component, threshold: float = 10.0):\n",
     "        a_field = getattr(a.bbox, field)\n",
     "        b_field = getattr(b.bbox, field)\n",
     "        return abs(a_field - b_field) < threshold\n",
@@ -251,17 +267,17 @@
     "            continue\n",
     "\n",
     "        # Numeric fields will be right-aligned, so check if right bounds are close\n",
-    "        if field_type == Decimal and is_aligned(\"right\", header_component, component):\n",
+    "        if field_type == Decimal and is_aligned(\"right\", header_component, component, 2.0):\n",
     "            field_name = field\n",
     "            break\n",
-    "        elif is_aligned(\"left\", header_component, component):\n",
+    "        elif is_aligned(\"left\", header_component, component, 8.0):\n",
     "            field_name = field\n",
     "            break\n",
     "\n",
     "    return field_name, component\n",
     "\n",
-    "def page_components_to_transactions(page_components: Components) -> List[Transaction]:\n",
-    "    it_components = iter(page_components)\n",
+    "def page_to_transactions(page: Page) -> List[Transaction]:\n",
+    "    it_components = iter(page.components)\n",
     "\n",
     "    # First line should be headers\n",
     "    header_components = take_transaction_components(it_components)\n",
@@ -274,15 +290,43 @@
     "    header_mapper = partial(map_component_to_field, header_fields)\n",
     "    transactions = []\n",
     "\n",
-    "    for component in take_transaction_components(it_components):\n",
-    "        transactions.append(header_mapper(component))\n",
+    "    last_date = \"\"\n",
+    "    tx_field_types = typing.get_type_hints(Transaction)\n",
+    "    while True:\n",
+    "        tx_components = take_transaction_components(it_components)\n",
+    "        if not tx_components:\n",
+    "            break\n",
+    "\n",
+    "        tx_dict = {}\n",
+    "        # Collect final transaction component info\n",
+    "        for component in tx_components:\n",
+    "            key, comp = header_mapper(component)\n",
+    "            key_type = tx_field_types.get(key, None)\n",
+    "            \n",
+    "            if key_type == str:\n",
+    "                tx_dict[key] = tx_dict.get(key, []) + [comp.text]\n",
+    "            if key_type == datetime.date:\n",
+    "                try:\n",
+    "                    date = date_parse(comp.text)\n",
+    "                    last_date = date\n",
+    "                    tx_dict[key] = date\n",
+    "                except:\n",
+    "                    log.error(f\"Bad date: {comp.text!r}\")\n",
+    "            if key_type == Decimal:\n",
+    "                try:\n",
+    "                    n = Decimal(comp.text.replace(\",\", \"\"))\n",
+    "                    tx_dict[key] = n\n",
+    "                except:\n",
+    "                    log.error(f\"Bad decimal: {comp.text!r}\")\n",
+    "\n",
+    "        if tx_dict:\n",
+    "            transactions.append(tx_dict)\n",
     "\n",
     "    return transactions\n",
     "\n",
     "p = s.xpath(\"./page[@id=1]\")\n",
     "lc = process_page_components(p)\n",
-    "print(lc)\n",
-    "page_components_to_transactions(lc)"
+    "page_to_transactions(lc)"
    ]
   },
   {
@@ -310,6 +354,16 @@
    "id": "cfe85a78-efea-425a-ac1f-ad19b579be6c",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "date_matcher.match('From April 25, 2023 to May 25, 2023')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa5db1da-88b1-4d71-a388-95f7d2af74c8",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -329,7 +383,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
