Convert notebook to python file
- Basic converter script working
- Convert functions to static methods on respective classes
- Use click for a basic CLI interface
- Testing notebook for generating sample XML for tests

--- a/test_pdf/parse_chequing_new_xml.ipynb
+++ b/test_pdf/parse_chequing_new_xml.ipynb
@@ -18,11 +18,15 @@
     "\n",
     "from decimal import Decimal\n",
     "from functools import partial\n",
+    "from io import StringIO\n",
     "from itertools import groupby, starmap, takewhile\n",
-    "from typing import List, Iterator, NamedTuple\n",
+    "from pathlib import Path\n",
+    "from typing import List, Iterator, NamedTuple, Optional\n",
     "\n",
+    "from dateutil.parser import parse as date_parse\n",
     "from parsel import Selector\n",
-    "from dateutil.parser import parse as date_parse"
+    "from pdfminer.high_level import extract_text_to_fp\n",
+    "from pdfminer.layout import LAParams"
    ]
   },
   {
@@ -50,36 +54,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ce29c49-e988-44c2-8f2b-becd715e110f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from parsel import Selector\n",
-    "with open(\"test_may_2023_new.xml\", \"r\") as fp:\n",
-    "    xmlraw = fp.read()\n",
-    "\n",
-    "s = Selector(text=xmlraw, type=\"xml\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "85bc99f0-38d0-4db4-aa65-5c8820f3ffce",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "textline = s.xpath(\"./page[@id='1']//textbox[@id='21']/textline\")[0]\n",
-    "\"\".join(textline.xpath(\"./text/text()\").getall()).strip()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "a655bf3d-0c47-48cf-bef5-ec001f858403",
    "metadata": {},
    "outputs": [],
    "source": [
-    "BBox = NamedTuple(\"BBox\", [(\"left\", float), (\"bottom\", float), (\"right\", float), (\"top\", float)])\n",
+    "class BBox(NamedTuple):\n",
+    "    left: float\n",
+    "    bottom: float\n",
+    "    right: float\n",
+    "    top: float\n",
     "\n",
     "def process_bbox(tag: Selector) -> BBox:\n",
     "    # Expect a comma-separated list of 4 coordinates in order: left, top, right, bottom\n",
@@ -101,11 +84,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TextLine = NamedTuple(\"TextLine\", [(\"bbox\", BBox), (\"parent_id\", int), (\"text\", str), (\"font\", str), (\"size\", float)])\n",
-    "TextBox = NamedTuple(\"TextBox\", [(\"bbox\", BBox), (\"id\", int), (\"lines\", List[TextLine])])\n",
-    "\n",
-    "def process_textbox(tag: Selector):\n",
-    "    pass\n",
+    "class TextLine(NamedTuple):\n",
+    "    bbox: BBox\n",
+    "    parent_id: int\n",
+    "    text: str\n",
+    "    font: str\n",
+    "    size: str\n",
     "\n",
     "def process_textline(textline: Selector) -> TextLine:\n",
     "    bbox = process_bbox(textline)\n",
@@ -123,8 +107,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "LinePart = NamedTuple(\"LinePart\", [(\"bbox\", BBox)])\n",
-    "Separator = NamedTuple(\"Separator\", [(\"bbox\", BBox)])\n",
+    "class LinePart(NamedTuple):\n",
+    "    bbox: BBox\n",
+    "\n",
+    "class Separator(NamedTuple):\n",
+    "    bbox: BBox\n",
     "\n",
     "def process_linepart(linepart: Selector) -> LinePart:\n",
     "    bbox = process_bbox(linepart)\n",
@@ -144,6 +131,7 @@
    "source": [
     "details_sentinel = \"Details of your account\"\n",
     "date_matcher = re.compile(r\"^From (.+) to (.+)$\")\n",
+    "page_number_matcher = re.compile(\"^(\\d+) of (\\d+)$\")\n",
     "\n",
     "Component = TextLine|Separator\n",
     "Components = List[Component]\n",
@@ -153,6 +141,7 @@
     "    start_date: datetime.date\n",
     "    end_date: datetime.date\n",
     "    components: Components\n",
+    "\n",
     "\n",
     "def process_page_components(page_tag: Selector) -> Page:\n",
     "    page_id = page_tag.attrib.get(\"id\", \"0\")\n",
@@ -174,9 +163,15 @@
     "            sentinel_found = textline\n",
     "        if date_matcher.match(textline.text):\n",
     "            log.info(f\"found page dates: {textline}\")\n",
-    "            start_date_str, end_date_str = date_matcher.match(textline.text).groups()\n",
-    "            start_date = date_parse(start_date_str)\n",
-    "            end_date = date_parse(end_date_str)\n",
+    "            try:\n",
+    "                start_date_str, end_date_str = date_matcher.match(textline.text).groups()\n",
+    "                start_date = date_parse(start_date_str).date()\n",
+    "                end_date = date_parse(end_date_str).date()\n",
+    "            except Exception as exc:\n",
+    "                log.warning(f\"Could not parse dates: {exc}\")\n",
+    "        elif page_number_matcher.match(textline.text):\n",
+    "            # Skip page numbers\n",
+    "            page_transaction_components.pop()\n",
     "\n",
     "    sep_lines = []\n",
     "    # Filter for all lines\n",
@@ -204,6 +199,10 @@
     "    # Sort the parsed transaction components vertically (inversed), then horizontally\n",
     "    page_transaction_components.sort(key=lambda item: (-(item.bbox.top), item.bbox.left))\n",
     "\n",
+    "    # Didn't find sentinel, so there probably aren't transactions here\n",
+    "    if sentinel_found is None:\n",
+    "        return Page(start_date=start_date, end_date=end_date, components=[])\n",
+    "\n",
     "    # Take all items after sentinel\n",
     "    sentinel_index = page_transaction_components.index(sentinel_found)\n",
     "    if sentinel_index == -1:\n",
@@ -221,9 +220,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "clean_date = re.compile(r\"[$,]\")\n",
+    "\n",
     "transaction_fields = [\"date\", \"description\", \"withdrawals\", \"deposits\", \"balance\"]\n",
     "transaction_field_types = [datetime.date, str, Decimal, Decimal, Decimal]\n",
-    "Transaction = NamedTuple(\"Transaction\", list(zip(transaction_fields, transaction_field_types)))\n",
+    "\n",
+    "class Transaction(NamedTuple):\n",
+    "    date: datetime.date\n",
+    "    description: str = \"\"\n",
+    "    withdrawals: Optional[Decimal] = None\n",
+    "    deposits: Optional[Decimal] = None\n",
+    "    balance: Optional[Decimal] = None\n",
     "\n",
     "def take_transaction_components(components: Iterator[Component]) -> Components:\n",
     "    \"\"\"\n",
@@ -276,7 +283,7 @@
     "\n",
     "    return field_name, component\n",
     "\n",
-    "def page_to_transactions(page: Page) -> List[Transaction]:\n",
+    "def page_to_transactions(page: Page, description_separator=\" \") -> List[Transaction]:\n",
     "    it_components = iter(page.components)\n",
     "\n",
     "    # First line should be headers\n",
@@ -290,7 +297,7 @@
     "    header_mapper = partial(map_component_to_field, header_fields)\n",
     "    transactions = []\n",
     "\n",
-    "    last_date = \"\"\n",
+    "    last_date = page.start_date\n",
     "    tx_field_types = typing.get_type_hints(Transaction)\n",
     "    while True:\n",
     "        tx_components = take_transaction_components(it_components)\n",
@@ -299,69 +306,147 @@
     "\n",
     "        tx_dict = {}\n",
     "        # Collect final transaction component info\n",
+    "        # Final type conversion for dates and Decimal\n",
     "        for component in tx_components:\n",
     "            key, comp = header_mapper(component)\n",
     "            key_type = tx_field_types.get(key, None)\n",
     "            \n",
-    "            if key_type == str:\n",
+    "            if issubclass(str, key_type):\n",
     "                tx_dict[key] = tx_dict.get(key, []) + [comp.text]\n",
-    "            if key_type == datetime.date:\n",
+    "            if issubclass(datetime.date, key_type):\n",
     "                try:\n",
-    "                    date = date_parse(comp.text)\n",
+    "                    date = date_parse(comp.text, default=last_date)\n",
+    "\n",
+    "                    # This probably means we're in a new year\n",
+    "                    if date < last_date:\n",
+    "                        date = date.replace(year=page.end_date.year)\n",
+    "\n",
     "                    last_date = date\n",
     "                    tx_dict[key] = date\n",
-    "                except:\n",
-    "                    log.error(f\"Bad date: {comp.text!r}\")\n",
-    "            if key_type == Decimal:\n",
+    "\n",
+    "                except Exception as exc:\n",
+    "                    log.warning(f\"Bad date: {comp.text!r} ({exc})\")\n",
+    "            if issubclass(Decimal, key_type):\n",
     "                try:\n",
-    "                    n = Decimal(comp.text.replace(\",\", \"\"))\n",
+    "                    n = Decimal(clean_date.sub(\"\", comp.text))\n",
     "                    tx_dict[key] = n\n",
     "                except:\n",
-    "                    log.error(f\"Bad decimal: {comp.text!r}\")\n",
+    "                    log.warning(f\"Bad decimal: {comp.text!r}\")\n",
     "\n",
     "        if tx_dict:\n",
-    "            transactions.append(tx_dict)\n",
+    "            if not \"date\" in tx_dict:\n",
+    "                tx_dict[\"date\"] = last_date\n",
+    "            tx_dict[\"description\"] = description_separator.join(tx_dict[\"description\"])\n",
+    "            transactions.append(Transaction(**tx_dict))\n",
     "\n",
-    "    return transactions\n",
-    "\n",
-    "p = s.xpath(\"./page[@id=1]\")\n",
-    "lc = process_page_components(p)\n",
-    "page_to_transactions(lc)"
+    "    return transactions"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "97aae92f-0ef1-406a-8177-f8b9e54eb740",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "for page in s.xpath(\"./page[@id=1]\"):\n",
-    "    page_id = page.attrib.get(\"id\", \"0\")\n",
-    "    print(f\"Page {page_id}\\n\")\n",
-    "    page_components = process_page_components(page)\n",
-    "    for item in page_components:\n",
-    "        if type(item) == Separator:\n",
-    "            print(f\"\\n{item}\")\n",
-    "        elif type(item) == TextLine:\n",
-    "            print(item.text, end=\" \")\n",
-    "    print(\"\\n\" + \"-\"*20 + \"\\n\")"
+    "from tabulate import tabulate\n",
+    "\n",
+    "def parse_xml_doc(filename: str|Path) -> List[Transaction]:\n",
+    "    with open(filename, \"r\") as fp:\n",
+    "        xmlraw = fp.read()\n",
+    "\n",
+    "    try:\n",
+    "        doc = Selector(text=xmlraw, type=\"xml\")\n",
+    "    except:\n",
+    "        log.error(f\"Could not parse {filename} as XML\")\n",
+    "        sys.exit(1)\n",
+    "\n",
+    "    return parse_xml(doc)\n",
+    "\n",
+    "def parse_xml(doc: Selector) -> List[Transaction]:\n",
+    "    all_transactions = []\n",
+    "\n",
+    "    for page in doc.xpath(\"./page\"):\n",
+    "        page_id = page.attrib.get(\"id\", \"0\")\n",
+    "        log.info(f\"Processing page {page_id}\\n\")\n",
+    "        page_comp = process_page_components(page)\n",
+    "\n",
+    "        # Skip pages with no components (might just be text)\n",
+    "        if not page_comp.components:\n",
+    "            continue\n",
+    "\n",
+    "        page_transactions = page_to_transactions(page_comp)\n",
+    "        all_transactions += page_transactions\n",
+    "    \n",
+    "    return all_transactions\n",
+    "\n",
+    "def tabulate_results(res: List[Transaction]):\n",
+    "    # tabulate_tx = list(map(lambda tx: [tx.get(k, None) for k in transaction_fields], all_transactions))\n",
+    "    full_table = tabulate(\n",
+    "        res,\n",
+    "        headers=transaction_fields,\n",
+    "        tablefmt=\"rounded_grid\",\n",
+    "        numalign=\"right\",\n",
+    "        floatfmt=\".2f\",\n",
+    "    )\n",
+    "\n",
+    "    print(full_table)\n",
+    "\n",
+    "tabulate_results(parse_xml_doc(Path(\".\") / \"test_dec_2022_new.xml\"))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cfe85a78-efea-425a-ac1f-ad19b579be6c",
+   "id": "5e330651-a722-4519-86a0-31b4f2ce3e82",
    "metadata": {},
    "outputs": [],
    "source": [
-    "date_matcher.match('From April 25, 2023 to May 25, 2023')"
+    "def parse_pdf_doc(filename: str|Path) -> List[Transaction]:\n",
+    "    xml_data = StringIO()\n",
+    "    layout_params = {'detect_vertical': True, 'line_overlap': 0.51, 'all_texts': True, 'boxes_flow': 0.8}\n",
+    "    with open(filename, \"rb\") as fp:\n",
+    "        extract_text_to_fp(inf=fp, outfp=xml_data, output_type=\"xml\", laparams=LAParams(**layout_params), codec=None)\n",
+    "\n",
+    "    try:\n",
+    "        doc = Selector(text=xml_data.getvalue(), type=\"xml\")\n",
+    "    except:\n",
+    "        log.error(f\"Could not parse {filename} as XML\")\n",
+    "        sys.exit(1)\n",
+    "\n",
+    "    return parse_xml(doc)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa5db1da-88b1-4d71-a388-95f7d2af74c8",
+   "id": "8c771029-9ba7-45c9-bdb5-bcbce00c8364",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tabulate_results(parse_pdf_doc(Path(\".\") / \"test_dec_2022.pdf\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13590fa3-d0ec-413f-9a5d-ab360c60c579",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "issubclass(Decimal, typing.get_type_hints(Transaction)[\"balance\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28886dc2-654d-4358-9b8c-1541f1ca5ad9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -383,7 +468,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
